# TH-TRADING-SYSTEM

./: .UNSTAGED_FIX_README.md  .bandit  .coverage  .dockerignore  .env  .env.example  .env.prod.example  .env.vault.example  .gitattributes  .gitignore  .pre-commit-config.yaml  ACTION_ITEMS.md  CHANGELOG.md  CONTAINERIZATION_CHECKLIST.md  CONTAINERIZATION_SUMMARY.txt  DOCKER_BEST_PRACTICES.md  DOCKER_REFERENCE.md  Dockerfile  Dockerfile.prod  EXECUTIVE_SUMMARY.md  FINAL_MANIFEST.md  IMPLEMENTATION_GUIDE.md  INDEX.md  Makefile  PROGRESS_SUMMARY.md  QUICK_START.md  README.md  REPORT.md  RUNBOOK.md  START_HERE.md  audit_results.md.resolved  ci_test.sh  conftest.py  core_models.py  dashboard_log.txt  docker-compose.prod.yml  docker-compose.yml  dummy.csv  history_sample.json  journal_service.py  (+26 more)
.agents/rules/: code-style-guide.md
.github/instructions/: code-style-guide.instructions.md
.github/workflows/: ci.yml  deploy.yml  pylint.yml
.hypothesis/constants/: 003ed9435c6e6e8c  006b559781a41f7f  010258c38047fd64  01831d6f995783ed  01ea48fbfd6c9f17  0272edf6d5a2f56f  02ede9ea5a337fc4  033cea2e5cae6cf7  044aa4a97dd3204b  048d132fc1adcccb  04d4d14e6a4b659f  0570a7c52cd987f9  0628f2618034526e  07130fa69393a3b0  0736e2d4acddd01a  07439c313140ce05  0799a57e5d15899f  07b8446a052edf99  07d98b311cb7eb7d  083923e65ff97f7c  0911900811f8ee56  09482feeaa124f43  09ae28b390a241d0  09c2299867270750  0a174ab092bdf149  0a6403dce3b6e280  0b08334a64a0dc37  0b1a4bdfddf6460d  0b3a7b455ccda49e  0bbf713aaf267494  0c5c5e15615e3822  0cfa12dfbf9e9abb  0d17572969191212  0d65a410db824952  0d81dd8c57144454  0db0293f9187118c  0dddcc86012b4b02  0e19efd1203f80b3  0e7f8902539f63f3  0f0d1a97d70682da  (+740 more)
artifacts/research/: cal_0f8a8a5d.html  cal_0f8a8a5d.json  cal_38003d0f.html  cal_38003d0f.json  cal_e426b8b6.html  cal_e426b8b6.json  res_269bb50d.html  res_269bb50d.json  res_775ef32f.json  res_be454d1e.json  res_fc7bc523.json
bridge/mt5/: LiveBridgeEA.mq5  README.md
config/: execution_prep.yaml  guardrails_config.yaml  pilot_gate.yaml
config/policies/: policy_best_conditions.yaml  policy_default.yaml  policy_event_heavy.yaml  policy_risk_off.yaml  selection_rules.yaml
config/prometheus/: alerts.yml
dashboard/: index.html  script.js  styles.css
data/: sample_ohlcv.csv
docs/: ALIGNMENT_REPORT.md  DEPLOYMENT.md  DISASTER_RECOVERY.md  END_TO_END_DEMO.md  FRIEND_WALKTHROUGH.md  FUNCTIONAL_SPEC_SNAPSHOT.md  INTEGRATIONS.md  OPERATOR_MANUAL.md  PROVIDER_MAP.md  RELEASE_CHECKLIST.md
infra/: Dockerfile.service  cli.py
infra/migrations/: env.py
scripts/: backup_db.sh  deploy_vps.sh  hygiene.ps1  hygiene.sh  release_check.py  smoke_test.py  smoke_test.sh
scripts/migrations/: replace_styles.py  replace_styles_2.py  replace_styles_3.py
scripts/v1_demo/: README.md  core_models.py  demo.py  journal_service.py  main.py  risk_engine.py  tests  (+2 more)
tasks/: todo.md
tests/: test_chaos.py  test_dashboard_phase5.py  test_db_failover.py  test_e2e_workflow.py  test_engines.py  test_execution_prep_integ.py  test_final_compliance.py  test_jit_phase4.py  test_mission_dbridge.py  test_mission_e_bridge.py  test_mission_f_management.py  test_mission_g_tuning.py  test_mission_h_pilot.py  test_ops_reports.py  test_phx_phase3.py  test_preflight_checks.py  test_properties.py  test_providers.py  test_release_metadata.py  test_safety.py  test_safety_drills.py  test_sidebar.py  test_stress.py  test_theme.py
tmp/: check_db_schema.py  repair_db.py
(+184 files in other folders)
