[project]
name = "th-trading-system"
version = "1.0.0"
description = "Regime-Adaptive Trading Guardrails & Dashboard"
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = [
    "E501", # Line too long (handled by formatter)
    "B008", # Do not perform function calls in argument defaults
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_no_return = true
ignore_missing_imports = true
explicit_package_bases = true
mypy_path = "."
# Remaining suppressions — cleared file-by-file as type annotations are added
disable_error_code = [
    "assignment", "attr-defined", "arg-type", "union-attr", "return-value"
]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q --cov=shared --cov=services --cov-report=term-missing"
markers = [
    "stress: marks tests as load/stress tests (deselect with -m 'not stress')",
    "chaos: marks tests as chaos engineering tests (deselect with -m 'not chaos')",
]
 
[tool.pyright]
include = ["shared", "services", "infra"]
extraPaths = ["."]
typeCheckingMode = "basic"
pythonVersion = "3.10"
pythonPlatform = "Windows"
executionEnvironments = [
  { root = "." }
]
